# papyrus

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: citation.py  conversation.py  paper.py
backend/app/routers/: chat.py  citations.py  health.py  papers.py
backend/app/schemas/: chat.py  citation.py  paper.py
backend/app/services/: chat_service.py  chunker.py  citation_extractor.py  embeddings.py  llm.py  pdf_processor.py  retriever.py  vector_store.py
backend/app/tasks/: process_paper.py
backend/tests/: conftest.py  test_chunker.py  test_pdf_processor.py
